fixed horizontal scrollbard

--- a/en/adapt/pin-finder/styles/override.css
+++ b/en/adapt/pin-finder/styles/override.css
@@ -4,6 +4,7 @@ body {
     background-image: none;
     font-family: 'Roboto';
     overflow-y: scroll;
+    overflow-x: hidden;
 }
 
 .cheat-margin {
